--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 nav>ul {
@@ -43,4 +44,26 @@ nav a {
 
 .diff-r {
     color: #FD6E0A;
+}
+
+.header {
+    background-color: #FFF8F3;
+}
+
+.banner {
+    padding: 30px 30px 30px 200px;
+    display: flex;
+    align-items: center;
+
+}
+
+.pic {
+    width: 500px;
+    height: 600px;
+}
+
+.heading {
+    color: var(--Dark-02, #474747);
+    font-size: 45px;
+    font-weight: 600;
 }
