--- a/styles/index.css
+++ b/styles/index.css
@@ -119,9 +119,11 @@ main {
     color: var(--Dark-01, #181818);
     font-size: 35px;
     font-weight: 700;
+    text-align: center;
 }
 
-.details {
+
+.details{
     color: #757575;
     font-size: 18px;
     font-weight: 400;
@@ -144,4 +146,18 @@ main {
     font-family: Open Sans;
     font-size: 20px;
     font-weight: 700;
+}
+/*what i do section*/
+#what-i-do{
+    padding: 30px 150px;
+    text-align: center;
+}
+.skill{
+    text-align: left;
+    padding: 30px;
+    width: 200px;
+}
+.continer{
+    display: flex;
+    justify-content: space-around;
 }
