--- a/styles/index.css
+++ b/styles/index.css
@@ -195,7 +195,7 @@ main section {
     font-size: 25px;
     font-weight: 700;
     margin: 0;
-    
+
 
 }
 
@@ -214,10 +214,41 @@ main section {
     font-weight: 400;
 
 }
-.resume-container hr{
+
+.resume-container hr {
     margin: 30px;
 }
-.downlod-cv{
+
+.downlod-cv {
     text-align: center;
     margin-top: 50px;
+}
+
+footer {
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 230px;
+}
+
+.footer-colum {
+    width: 50%;
+    padding: 30px;
+    text-align: left;
+}
+
+.contact input[type="text"],.contact input[type="email"],
+textarea { 
+    display: block;
+    margin-bottom: 24px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
+}
+.social-links a{
+    margin: 25px;
 }
